# BLOSSOM

./: .gitignore  CITATION.cff  LICENSE  README.md  requirements.txt  soil.py  soil_model.yaml  viz.ipynb
blossom/: Makefile  auc_optimized_config.props  base_config.props  blossom.py  blossom_2d.py  blossom_3d.py  nsgaii_config.props  trophic_net.ipynb
blossom/hpc/: job.sbatch  run_blossom.sh  run_optuna.py  run_optuna_with_postgres.sh
blossom_cpp/: Makefile  base_config.props  calibrated_config.props  opt.py  optimized_config.props
blossom_viz/: binary_to_parquet.ipynb  org_viz.ipynb  presentation_viz.ipynb  som_viz.ipynb  viz.ipynb  viz.py
cpp_blossom/: CMakeLists.txt
cpp_blossom/src/: NeighborhoodOffsets.hpp  main.cpp
experiments/: A_data_prep.py  B_data_analysis.ipynb  adf_test.ipynb  co_occ_analysis.ipynb  data_analysis.ipynb  data_analysis.py  data_fix.ipynb  data_prep.ipynb  data_prep.py  data_viz.ipynb  full_run.yaml  initial_co_occ_analysis.ipynb  initial_population.ipynb  main.py  nets.ipynb  network_viz.ipynb  nutrientgrid.ipynb  old_viz.ipynb  run_1.yaml  run_2.yaml  sampling_analysis.ipynb  statistics_analysis.ipynb  stochasticity_analysis.ipynb  test.ipynb  trophic_net.ipynb  viz.ipynb  viz.py
figures/: 4-methods_viz.ipynb  5-results_viz.ipynb  6-discussion_viz.ipynb  8-appendix_viz.ipynb
hpc/: import_db.sh  param_selection.ipynb  run_blossom.py  run_blossom.sh  run_optuna.py  run_optuna_with_postgres.sh
sosi/: __init__.py  agent.py  job.sbatch  model.py  sosi.py  sosi_2.py  utils.py
src/: soil.py  soil_model.yaml  viz.ipynb
(+220 files in other folders)
